@@ -1,3 +1,6 @@
+? - ?
+* statvfs: add f_flags - decoded f_flag field
+
 0.0.6 - 1 Apr 2013
 * New string and bigarray functions :
   * get_uint63 set_uint63 get_int63 set_int63
